--- a/RELEASENOTES
+++ b/RELEASENOTES
@@ -6,4 +6,4 @@ Better handling for serial/proto messages
 Refactoring
 
 
-#For older version descriptions refer to github.com/RaspberryLife/server/releasess
+#For older version descriptions refer to https://github.com/RaspberryLife/server/releasess
