--- a/RELEASENOTES
+++ b/RELEASENOTES
@@ -1,3 +1,7 @@
+#(1.1.1)
+Refactoring for more extensive event bus usage
+
+
 #1.1.0
 Added Hibernate for Database handling
 Updated Protobuf message types to handle N<->N logic and extended data handling
