rework serial connection, small changes

--- a/RELEASENOTES
+++ b/RELEASENOTES
@@ -1,7 +1,9 @@
-#(1.1.1)
+#1.1.1
 Refactoring for more extensive event bus usage
 extend schedule functionality
 added email notifcation on server startup
+reworked serial connection to handle errors better
+added general protobuf debug
 
 #1.1.0
 Added Hibernate for Database handling
