--- a/RELEASENOTES
+++ b/RELEASENOTES
@@ -1,22 +1,23 @@
 #1.1.3
 Extended database scheme for full logic support
 Added User and Notification message database model
+Mapping for logic (protobuf <-> database)
 
 
 #1.1.2
 MySQL table creation now done by hibernate
 Updated protobuf
-update gradle to version 2.2.1
-replace jar build with distZip
-clean up MySQL connection
-extend datamodel
+Update gradle to version 2.2.1
+Replace jar build with distZip
+Clean up MySQL connection
+Extend datamodel
 
 #1.1.1
 Refactoring for more extensive event bus usage
-extend schedule functionality
-added email notifcation on server startup
-reworked serial connection to handle errors better
-added general protobuf debug
+Extend schedule functionality
+Added email notifcation on server startup
+Reworked serial connection to handle errors better
+Added general protobuf debug
 
 #1.1.0
 Added Hibernate for Database handling
