--- a/RELEASENOTES
+++ b/RELEASENOTES
@@ -1,8 +1,11 @@
 #1.1.3
 Extended database scheme for full logic support
+Read/Write logic
 Added User and Notification message database model
 Mapping for logic (protobuf <-> database)
-
+update to latest protobuf
+more work on user authentication
+add user resolver
 
 #1.1.2
 MySQL table creation now done by hibernate
