--- a/RELEASENOTES
+++ b/RELEASENOTES
@@ -1,3 +1,7 @@
+#1.1.4
+add DataSet resolver
+add module address generation
+
 #1.1.3
 Extended database scheme for full logic support
 Read/Write logic
