--- a/RELEASENOTES
+++ b/RELEASENOTES
@@ -1,3 +1,8 @@
+#1.1.5
+refactor message handling
+implement fablab as a demo extension
+refactor other stuff as well
+
 #1.1.4
 add DataSet resolver
 add module address generation
